--- a/HealthChecker/HealthChecker.csproj
+++ b/HealthChecker/HealthChecker.csproj
@@ -1,18 +1,26 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <ApplicationIcon></ApplicationIcon>
+    <Authors>StackWorx &amp; Thulani Nyama</Authors>
+    <PackageTags>ASP.Net, Health Checker, IHttpClientFactory, GraphQL, StackWorx, Thulani Nyama</PackageTags>
+    <NeutralLanguage>fo</NeutralLanguage>
+    <Copyright>StackWorx</Copyright>
+    <Company>StackWorx</Company>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.5" />
-    <PackageReference Include="GraphQL.Server.Ui.Playground" Version="3.5.0-alpha0046" />
-    <PackageReference Include="GraphQL.Server.Transports.AspNetCore" Version="3.5.0-alpha0046" />
     <PackageReference Include="GraphQL.Server.Core" Version="3.5.0-alpha0046" />
-    <PackageReference Include="GraphQL.Server.Transports.AspNetCore.SystemTextJson" Version="3.5.0-alpha0046" />
+    <PackageReference Include="GraphQL.Server.Transports.AspNetCore" Version="3.5.0-alpha0046" />
+    <PackageReference Include="GraphQL.Server.Ui.Playground" Version="3.5.0-alpha0046" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.5" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="GraphQL\" />
   </ItemGroup>
+
 </Project>
