--- a/HealthChecker/Properties/launchSettings.json
+++ b/HealthChecker/Properties/launchSettings.json
@@ -1,9 +1,9 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:50169",
+      "applicationUrl": "http://localhost:50169/",
       "sslPort": 44323
     }
   },
@@ -18,11 +18,11 @@
     "HealthChecker": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
-      "launchUrl": "https://localhost:5001/ui/playground",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "launchUrl": "https://localhost:5001/ui/playground"
     }
   }
 }
