--- a/HealthChecker/Properties/launchSettings.json
+++ b/HealthChecker/Properties/launchSettings.json
@@ -18,11 +18,14 @@
     "HealthChecker": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "https://localhost:5001/ui/playground",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
-      "launchUrl": "https://localhost:5001/ui/playground"
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+    },
+    "Health Checker": {
+      "commandName": "Executable"
     }
   }
 }
