--- a/HealthChecker/HealthChecker.csproj
+++ b/HealthChecker/HealthChecker.csproj
@@ -13,6 +13,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNetCore.HealthChecks.SqlServer" Version="5.0.3" />
+    <PackageReference Include="AspNetCore.HealthChecks.UI" Version="3.1.3" />
+    <PackageReference Include="AspNetCore.HealthChecks.Uris" Version="5.0.1" />
+    <PackageReference Include="GraphQL-Parser" Version="5.1.0" />
     <PackageReference Include="GraphQL.Server.Core" Version="3.5.0-alpha0046" />
     <PackageReference Include="GraphQL.Server.Transports.AspNetCore" Version="3.5.0-alpha0046" />
     <PackageReference Include="GraphQL.Server.Ui.Playground" Version="3.5.0-alpha0046" />
